--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_GridViewPartial_empleado_novedad.cshtml
@@ -94,12 +94,19 @@
             column.Width = Unit.Percentage(6);
             column.PropertiesEdit.DisplayFormatString = "c2";
         });
-        settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(10);
-        settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(25);
+        settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(8);
+        settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(22);
         settings.Columns.Add("Descripcion","Nómina").Width = Unit.Percentage(8);
         settings.Columns.Add("DescripcionProcesoNomina","Proceso").Width = Unit.Percentage(15);
-        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(15);
-
+        settings.Columns.Add("Observacion", "Observación").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_003", "RRHHReportes", new { Area = "Reportes", IdEmpleado = DataBinder.Eval(c.DataItem, "IdEmpleado"), IdNovedad = DataBinder.Eval(c.DataItem, "IdNovedad") }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = Unit.Percentage(5);
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
