--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma.cshtml
@@ -3,8 +3,8 @@
 @{
     var grid = Html.DevExpress().GridView(settings =>
     {
-    settings.Name = "GridView_proforma";
-    settings.CallbackRouteValues = new { Controller = "Proforma", Action = "GridViewPartial_proforma" , IdSucursal = ViewBag.IdSucursal };
+        settings.Name = "GridView_proforma";
+        settings.CallbackRouteValues = new { Controller = "Proforma", Action = "GridViewPartial_proforma" , IdSucursal = ViewBag.IdSucursal };
         settings.KeyFieldName = "IdProforma";
         settings.Width = Unit.Percentage(100);
 
@@ -70,7 +70,7 @@
             c.SetHeaderTemplateContent(tc =>
             {
                 ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo", new { IdSucursal = ViewBag.IdSucursal }).ToHtmlString()
+                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString()
                 );
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
@@ -79,10 +79,36 @@
         });
 
         settings.Columns.Add("IdProforma", "ID").Width = Unit.Percentage(5);
-        settings.Columns.Add("pf_codigo", "Código").Width = Unit.Percentage(8);
-        settings.Columns.Add("pf_observacion", "Observación").Width = Unit.Percentage(20);
-        settings.Columns.Add("pf_fecha", "Fecha").Width = Unit.Percentage(20);
-        settings.Columns.Add("pf_fecha_vcto", "Fecha vencimiento").Width = Unit.Percentage(20);
+        settings.Columns.Add("pe_nombreCompleto", "Cliente").Width = Unit.Percentage(30);
+        settings.Columns.Add("pf_observacion", "Observación").Width = Unit.Percentage(15);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pd_subtotal";
+            column.Caption = "Subtotal";
+            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.Width = Unit.Percentage(10);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pd_iva";
+            column.Caption = "I.V.A.";
+            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.Width = Unit.Percentage(10);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pd_total";
+            column.Caption = "Total";
+            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.Width = Unit.Percentage(10);
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pf_fecha";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+            column.Width = Unit.Percentage(10);
+        });
         settings.Columns.Add("estado", "Estado").Width = Unit.Percentage(5);
     });
 }
