--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_CmbProducto_Proforma.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_CmbProducto_Proforma.cshtml
@@ -18,6 +18,8 @@
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
         settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
+
+        settings.Properties.ClientSideEvents.SelectedIndexChanged = "SeleccionarLote";
     })
     .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_list_bajo_demandaProducto,
     new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_info_bajo_demandaProducto).Bind(Model);
