--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
@@ -2,15 +2,15 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdProducto";
+        settings.Name = "IdProducto_padre";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "IngresoInventario", Action = "CmbProducto_IngresoInventario", Area = "Inventario" };
+        settings.CallbackRouteValues = new { Controller = "Producto", Action = "CmbProducto_padre", Area = "Inventario" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pr_descripcion";
-        settings.Properties.TextFormatString = "[{1}] {2}";
+        settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdProducto";
         settings.Properties.ValueType = typeof(decimal);
 
@@ -18,9 +18,9 @@
         settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
         settings.Properties.Columns.Add("nom_categoria", "Categoria", 15);
         settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
-
     })
-    .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioController().get_list_bajo_demanda,
-    new Core.Erp.Web.Areas.Inventario.Controllers.IngresoInventarioController().get_info_bajo_demanda).Bind(Model);
+    .BindList(new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Inventario.Controllers.ProductoController().get_info_bajo_demanda)
+    .Bind(Model.IdProducto);
+
 }
 @comboBox.GetHtml()
