--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Marca/Anular.cshtml
@@ -6,6 +6,14 @@
         Response.Redirect("~/Account/Login");
     }
     Layout = "~/Views/Shared/_Layout.cshtml";
+    if (ViewBag.mensaje != null)
+    {
+        <div class="alert alert-warning alert-dismissible">
+            <h4>
+                <i class="icon fa fa-warning"></i> @ViewBag.mensaje
+            </h4>
+        </div>
+    }
 }
 @using (Html.BeginForm("Anular", "Marca", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
