--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Nuevo.cshtml
@@ -122,7 +122,7 @@
                 <a href="#tab_composicion" aria-controls="Composicion" role="tab" data-toggle="tab" id="link_composicion">Composición</a>
             </li>
             <li>
-                <a href="#tab_imagen" aria-controls="Imágen" role="tab" data-toggle="tab">Imágen</a>
+                <a href="#tab_imagen" aria-controls="Imágen" role="tab" data-toggle="tab" id="link_imagen">Imágen</a>
             </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
@@ -439,6 +439,7 @@
             cargar_grupos();
             cargar_subgrupos();
             get_info_producto_tipo();
+            ValidarTabImagen();
         });
         $("#IdProductoTipo").change(function () {
             get_info_producto_tipo();
@@ -809,6 +810,17 @@
 
             }
         });
+    }
+
+    function ValidarTabImagen() {
+        var ID = IdProducto_padre.GetValue();
+        if (ID > 0) {
+            $("#link_imagen").hide();
+            $("#link_general").click();
+        } else {
+            $("#link_imagen").show();
+            $("#link_general").click();
+        }
     }
 
     function get_info_padre() {
