--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/Producto/Modificar.cshtml
@@ -442,6 +442,7 @@
                 autoclose: true
             })
             get_info_producto_tipo();
+            ValidarTabImagen();
         });
         $("#IdProductoTipo").change(function () {
             get_info_producto_tipo();
@@ -872,6 +873,17 @@
 
                 }
             });
+        }
+    }
+
+    function ValidarTabImagen() {
+        var ID = IdProducto_padre.GetValue();
+        if (ID > 0) {
+            $("#link_imagen").hide();
+            $("#link_general").click();
+        } else {
+            $("#link_imagen").show();
+            $("#link_general").click();
         }
     }
 
