--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoRubroAcumulado/_GridViewPartial_rubros_acumulados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoRubroAcumulado/_GridViewPartial_rubros_acumulados.cshtml
@@ -66,16 +66,16 @@
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(150);
+            c.Width = Unit.Pixel(100);
         });
 
 
-        settings.Columns.Add("IdRubro","ID");
-        settings.Columns.Add("pe_cedulaRuc","Cédula");
-        settings.Columns.Add("pe_nombreCompleto","Nombres");
-        settings.Columns.Add("ru_descripcion","Rubro");
-        settings.Columns.Add("Fec_Inicio_Acumulacion","Fecha solicitud");
-        settings.Columns.Add("Fec_Fin_Acumulacion","Fin solicitud");
+        settings.Columns.Add("IdRubro", "ID").Width = Unit.Percentage(8);
+        settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(10);
+        settings.Columns.Add("pe_nombreCompleto","Nombres").Width = Unit.Percentage(30);
+        settings.Columns.Add("ru_descripcion","Rubro").Width = Unit.Percentage(20);
+        settings.Columns.Add("Fec_Inicio_Acumulacion","Fecha solicitud").Width = Unit.Percentage(13);
+        settings.Columns.Add("Fec_Fin_Acumulacion","Fin solicitud").Width = Unit.Percentage(13);
 
     });
 }
