--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/OrdenCompraExterior/_CmbProveedor_exterior.cshtml
@@ -9,9 +9,9 @@
         settings.CallbackRouteValues = new { Controller = "Proveedor", Action = "CmbProveedor_exterior", Area = "CuentasPorPagar" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
-        settings.Properties.TextField = "pr_descripcion";
+        settings.Properties.TextField = "info_persona.pe_nombreCompleto";
         settings.Properties.TextFormatString = "[{0}] {1}";
-        settings.Properties.ValueField = "IdProducto";
+        settings.Properties.ValueField = "IdProveedor";
         settings.Properties.ValueType = typeof(decimal);
 
         settings.Properties.Columns.Add("IdProducto", "ID", 5);
