--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/Nuevo.cshtml
@@ -34,19 +34,26 @@
         <div class="col-md-6">
             <div class="col-md-6">
                 <div class="form-group">
-                    <label for="IdPuntoVta">Punto de venta*</label>
-                    @Html.DropDownListFor(q => q.IdPuntoVta, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control" })
-                    @Html.ValidationMessageFor(q => q.IdPuntoVta, "", new { @class = "text-danger" })
+                    <label for="IdSucursal">Sucursal*</label>
+                    @Html.DropDownListFor(q => q.IdSucursal, new SelectList(ViewBag.lst_sucursal, "IdSucursal", "Su_descripcion"), new { @class = "form-control", @id = "IdSucursal" })
+                    @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
                 </div>
             </div>
             <div class="col-md-6">
+                <div class="form-group">
+                    <label for="IdPuntoVta">Punto de venta*</label>
+                    @Html.DropDownListFor(q => q.IdPuntoVta, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control", @id = "IdPuntoVta" })
+                    @Html.ValidationMessageFor(q => q.IdPuntoVta, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCliente">Cliente*</label>
                     @Html.Partial("_CmbCliente_Factura", Model)
                     @Html.ValidationMessageFor(q => q.IdCliente, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdClienteContacto">Contacto</label>
                     @Html.DropDownListFor(q => q.IdContacto, new SelectList(ViewBag.lst_contacto, "IdContacto", "Nombres"), new { @class = "form-control", @id = "IdContacto" })
@@ -63,6 +70,13 @@
         </div>
 
         <div class="col-md-6">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdTerminoPago">Termino pago*</label>
+                    @Html.DropDownListFor(q => q.vt_tipo_venta, new SelectList(ViewBag.lst_pago, "IdTerminoPago", "nom_TerminoPago"), new { @class = "form-control", @id = "IdTerminoPago" })
+                    @Html.ValidationMessageFor(q => q.vt_tipo_venta, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdTerminoPago">Termino pago*</label>
@@ -128,9 +142,9 @@
 }
 <script>
     $(function () {
+        CargarPuntosDeVenta();
         get_info_termino_pago();
-        get_info_cliente();
-
+        get_info_cliente();        
         //Date picker
         $('#vt_fecha').datepicker({
             autoclose: true
@@ -147,18 +161,20 @@
         $("#vt_fecha").change(function () {
             cargar_fecha_vencimiento();
         });
-
+        $("#IdSucursal").change(function () {
+            CargarPuntosDeVenta();
+        });
     });
 
     function MostrarModal() {
-        GridView_LoteProforma.PerformCallback();
+        GridView_LoteFactura.PerformCallback();
         $("#OpModal").modal("show");
     }
 
     function SetLoteDetalle(ID) {
 
         $.ajax({
-            url: '@Url.Action("ChangeValuePartial", "Proforma",new { Area = "Facturacion"})',
+            url: '@Url.Action("ChangeValuePartial", "Factura",new { Area = "Facturacion"})',
             type: "GET",
             data: { value: ID },
             success: function (data) {
@@ -176,20 +192,20 @@
     function SeleccionarLote(s,e) {
         var datos = {
             IdSucursal: $("#IdSucursal").val(),
-            IdBodega: $("#IdBodega").val(),
+            IdPuntoVta: $("#IdPuntoVta").val(),
             IdProducto: s.GetValue()
         }
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("GetLotesPorProducto", "Proforma",new { Area = "Facturacion"})',
+            url: '@Url.Action("GetLotesPorProducto", "Factura",new { Area = "Facturacion"})',
             async: false,
             bDeferRender: true,
             bProcessing: true,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                GridView_proforma_det.GetEditor('IdCod_Impuesto').SetValue(data.IdCod_Impuesto_Iva);
+                GridView_factura_det.GetEditor('IdCod_Impuesto_Iva').SetValue(data.IdCod_Impuesto_Iva);
                 if (data.IdProducto_padre > 0) {
                     MostrarModal();
                 }
@@ -200,10 +216,10 @@
     }
 
     function cargar_fecha_vencimiento() {
-        var vida = Number($("#pf_plazo").val());
-        var from = $("#pf_fecha").val().split("/")
+        var vida = Number($("#vt_plazo").val());
+        var from = $("#vt_fecha").val().split("/")
         var f = new Date(from[2], from[1] - 1, from[0])
-        $('#pf_fecha_vcto').datepicker("update", moment(f, "DD-MM-YYYY").add(vida, 'days').format("DD/MM/YYYY"));
+        $('#vt_fech_venc').datepicker("update", moment(f, "DD-MM-YYYY").add(vida, 'days').format("DD/MM/YYYY"));
     }
 
         function get_info_termino_pago() {
@@ -213,12 +229,12 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("get_info_termino_pago", "Proforma",new { Area = "Facturacion"})',
+            url: '@Url.Action("get_info_termino_pago", "Factura",new { Area = "Facturacion"})',
             async: false,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
             success: function (data) {
-                $("#pf_plazo").val(data.Dias_Vct);
+                $("#vt_plazo").val(data.Dias_Vct);
                 cargar_fecha_vencimiento();
             },
             error: function (error) {
@@ -238,7 +254,7 @@
         $.ajax({
             type: 'POST',
             data: JSON.stringify(datos),
-            url: '@Url.Action("get_info_cliente", "Proforma",new { Area = "Facturacion"})',
+            url: '@Url.Action("get_info_cliente", "Factura",new { Area = "Facturacion"})',
             async: false,
             dataType: 'json',
             contentType: 'application/json; charset=utf-8',
@@ -271,7 +287,28 @@
             success: function (data) {
                 $.each(data, function (i, row) {
                     $("#IdContacto").append("<option value=" + row.IdContacto + ">" + row.Nombres + "</option>");
-                    $("#IdContacto").val("0");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function CargarPuntosDeVenta() {
+        $("#IdPuntoVta").empty();
+        var datos = {
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarPuntosDeVenta", "Factura",new { Area = "Facturacion"})',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdPuntoVta").append("<option value=" + row.IdPuntoVta + ">" + row.nom_PuntoVta + "</option>");
                 });
             },
             error: function (error) {
