--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_CmbCliente_Factura.cshtml
@@ -6,20 +6,19 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Proforma", Action = "CmbCliente_Proforma", Area = "Facturacion" };
+        settings.CallbackRouteValues = new { Controller = "Factura", Action = "CmbCliente_Factura", Area = "Facturacion" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
         settings.Properties.TextFormatString = "[{0}] {1}";
         settings.Properties.ValueField = "IdEntidad";
         settings.Properties.ValueType = typeof(decimal);
-        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
 
         settings.Properties.Columns.Add("IdEntidad", "ID", 10);
         settings.Properties.Columns.Add("pe_nombreCompleto", "Cliente", 90);
         settings.Properties.ClientSideEvents.SelectedIndexChanged = "function(s,e){get_info_cliente();}";
     })
-    .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.ProformaController().get_info_bajo_demanda)
+    .BindList(new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.Facturacion.Controllers.FacturaController().get_info_bajo_demanda)
     .Bind(Model.IdCliente);
 
 }
