--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/_GridViewPartial_proforma_det.cshtml
@@ -80,7 +80,7 @@
         {
             column.FieldName = "pd_precio";
             column.Caption = "Precio";
-            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
             column.EditorProperties().SpinEdit(q =>
             {
@@ -121,7 +121,7 @@
         {
             column.FieldName = "pd_precio_final";
             column.Caption = "Precio final";
-            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -129,7 +129,7 @@
         {
             column.FieldName = "pd_subtotal";
             column.Caption = "Subtotal";
-            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -137,7 +137,7 @@
         {
             column.FieldName = "pd_iva";
             column.Caption = "I.V.A.";
-            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
@@ -145,16 +145,16 @@
         {
             column.FieldName = "pd_total";
             column.Caption = "Total";
-            column.PropertiesEdit.DisplayFormatString = "{0:c2}";
+            column.PropertiesEdit.DisplayFormatString = "{0:n2}";
             column.Width = Unit.Percentage(10);
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
 
         settings.ClientSideEvents.BeginCallback = "function(s,e){e.customArgs['IdCliente'] = IdCliente.GetValue();}";
 
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_subtotal").DisplayFormat = "{0:c2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_iva").DisplayFormat = "{0:c2}";
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_total").DisplayFormat = "{0:c2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_subtotal").DisplayFormat = "{0:n2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_iva").DisplayFormat = "{0:n2}";
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "pd_total").DisplayFormat = "{0:n2}";
         settings.Settings.ShowFooter = true;
     });
 }
